# swagger2mcp

./: .env.production.template  .gitignore  .gitlab-ci.yml  .releaserc.gitlab.json  .releaserc.json  .trivyignore  AUTHENTICATION-IMPLEMENTATION.md  AUTHENTICATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER-TESTING-RESULTS.md  IMPLEMENTATION-SUMMARY.md  LICENSE  MANUAL-TESTING-GUIDE.md  MASTER-BRANCH-SETUP.md  PRODUCTION_READINESS_REVIEW.md  QA-BUG-REPORT.md  README.md  SEMANTIC-RELEASE.md  UI-UX-IMPROVEMENTS-COMPLETED.md  UI-UX-RECOMMENDATIONS.md  create-master-branch.sh  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  sample-api.yaml  sample-petstore.json  validate_mcp.js
.github/: copilot-instructions.md  dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.production  package-lock.json  package.json  tsconfig.json
docs/: API-DOCUMENTATION.md  AUTHENTICATION-IMPLEMENTATION.md  AUTHENTICATION.md  CRAWL-ENHANCEMENTS-TEST-PLAN.md  CRAWL-ENHANCEMENTS.md  DEVELOPMENT.md  DOCUMENTATION.md  MANUAL-UI-TESTING.md  MCP-BUILDER-GAPS.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READY.md  RATE_LIMITING_DDOS.md  RUN-TESTS-NOW.md  RUNBOOK.md  SECURITY.md  SSL_TLS_CERTIFICATES.md  SYSTEM-DEVELOPMENT.md  TESTING-INSTRUCTIONS.md  UI-UX-ANALYSIS.md  index.md  kubernetes.md  plan-mcpBuilderGaps.prompt.md
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.production  SHADCN-MIGRATION.md  (+6 more)
test-mcp-python/: README.md  pyproject.toml
test-mcp-python/src/: models.py  server.py  tools.py
(+140 files in other folders)
