[project]
name = "swagger-petstore"
version = "1.0.7"
description = "This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, yo"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.23.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
swagger-petstore = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
